# salesforce_scripts

./: .gitignore  README.md  d_numbers.json  main.py  pyproject.toml  salesforce_orgs.json
salesforce/: sf.py  utils.py
sk/: objects.py
utils/: logger.py
